# llm-minify

./: .gitignore  Cargo.toml  README.md
src/: main.rs  svd.rs  xml.rs
