[package]
name = "llm-minify"
description = "shrink files when pasting into LLMs"
license = "MIT"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.17.1"
quick-xml = "0.28.1"
regex = "1.7.3"
thiserror = "1.0.40"
