[package]
name = "llm-minify"
description = "shrink files when pasting into LLMs"
license = "MIT"
version = "0.1.1"
edition = "2021"

[dependencies]
once_cell = "1.17.1"
quick-xml = "0.28.1"


regex = "1.7.3"
ron = "0.8.0"
schemars = "0.8.12"
serde = { version = "1.0.160", features = ["derive"] }
serde-xml-rs = "0.6.0"
serde_json = "1.0.95"
thiserror = "1.0.40"

